Archive2/8b/1a0b595a555668/output
main.cpp: In function 'int main()':
main.cpp:15:39: error: 'make_pair' was not declared in this scope
     count.push_back(make_pair(RGB(), 0));
                                       ^
main.cpp:15:39: note: suggested alternative:
In file included from /usr/include/c++/4.8/bits/stl_algobase.h:64:0,
                 from /usr/include/c++/4.8/vector:60,
                 from main.cpp:10:
/usr/include/c++/4.8/bits/stl_pair.h:276:5: note:   'std::make_pair'
     make_pair(_T1&& __x, _T2&& __y)
     ^
